--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
       </div>
 
 <div class="table">
-      <h2>Responsive Table</h2>
+      <h2>Awards and Achievements</h2>
       <div class="table-wrapper">
         <table class="fl-table">
             <thead>
